--- a/foundations/flex/01-flex-center/style.css
+++ b/foundations/flex/01-flex-center/style.css
@@ -3,6 +3,10 @@
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+  /* addition */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .box {
