--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  /* code solusi saya di bawah */
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -16,6 +19,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  /* adding solution */
+  padding: 8px 16px;
 }
 
 input {
@@ -23,4 +28,37 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+/* solusi */
+.header, .footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+}
+
+.footer {
+  background-color: #eee;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: 16px;
+}
+
+a {
+  text-decoration: none;
+  color: silver;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* center horizontal */
+  justify-content: center; /* center vertikal */
+  gap: 16px;  /* jarak antar elemen: logo, input, buttons */
+  flex: 1; /* mengisi area kosong antara header dan footer */
 }
