--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -1,29 +1,77 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
-  min-height: 100vh;
+  min-height: 100vh; /*Memastikan body setidaknya memiliki tinggi 100% dari tinggi viewport (layar pengguna), memungkinkan footer diletakkan di bagian bawah layar.*/
+  /* solusi saya */
+  display: flex;
+  flex-direction: column; /*Mengatur item-item di dalam body (header, .main-container, footer) untuk berjejer secara vertikal (kolom).*/
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  /* solusi saya */
+  font-size: 32px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  padding: 0 16px; /*Menambahkan jarak internal (padding) atas/bawah 0, kiri/kanan 16px.*/
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  /* solusi saya */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
-  box-sizing: border-box;
+  box-sizing: border-box; /*Mengubah model kotak sehingga padding dan border dihitung di dalam nilai width yang ditetapkan (300px).*/
+  /* solusi saya */
+  flex-shrink: 0; /*Mencegah sidebar menciut jika ruang horizontal pada .main-container terbatas.*/
+  padding: 16px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  /* solusi saya */
+  width: 300px; /*tergantung besar layar hasil bisa berbeda seperti screenshoot*/
+  padding: 16px;
+}
+
+/* solusi saya */
+.main-container {
+  display: flex;
+  flex: 1; /*Ini adalah singkatan dari flex-grow: 1, flex-shrink: 1, dan flex-basis: 0%. Fungsinya yang paling penting adalah flex-grow: 1, yang membuat .main-container mengisi semua ruang vertikal yang tersisa setelah header dan footer mengambil tempatnya.*/
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 16px;
+}
+
+a {
+  font-size: 24px;
+  color: white;
+  text-decoration: none;
+}
+
+.card-container {
+  padding: 48px;
+  gap: 32px; /*Menambahkan jarak (celah) antara setiap kartu, baik secara horizontal maupun vertikal.*/
+  display: flex;
+  flex-wrap: wrap; /*Mengizinkan kartu-kartu (.card) melompat ke baris baru jika tidak ada cukup ruang horizontal di dalam container.*/
 }
